# mygitproject

./: readme.txt
myGetStream/: CMakeLists.txt  boonGetStream.cpp  boonGetStream.h  main.cpp
myGetStream/include/: jcsdk.h
weikakou_project/: CMakeLists.txt
weikakou_project/kfs/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  chepai.txt  cmake_install.cmake  demo.cpp
weikakou_project/kfs/algorithm/: .goutputstream-9SD41Y  Makefile  cmake_install.cmake
weikakou_project/kfs/cdt/: cmake_install.cmake
weikakou_project/kfs/cdt/.csettings/: cdt.managedbuild.toolchain.gnu.base.1741728665_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.cross.base.2107692391_org.eclipse.cdt.core.settings
weikakou_project/kfs/header/: Boon_algo.h  Boon_algo_config.h  Boon_algo_crc.h  Boon_algo_gabor_feature.h  Boon_algo_ivs_param.h  Boon_algo_list.h  Boon_algo_log.h  Boon_algo_log_private.h  Boon_algo_public_func.h  Boon_algo_tripwire_private.h  Boon_algo_type.h  Boon_algo_unzip_private.h  Boon_algo_unzipmem.h  Boon_algo_verification.h  hasp_vcode.h  ivs_gmm.h  ivs_track.h  ivsconfig.h
weikakou_project/kfs/mytest/: .goutputstream-E4ZKYY  Boon_algo_ivs_config.h  Boon_algo_tripwire_param.h  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  demo.cpp  demo.cpp~  demo.h
weikakou_project/mywkk/: CMakeLists.txt  cHttpClient.cpp  cHttpClient.h  main.cpp
weikakou_project/mywkk/common/: CMakeLists.txt  bglobal.cpp  codec.h  common.cpp
weikakou_project/mywkk/data/: ca-lc.crt  client-rj.crt
weikakou_project/mywkk/include/: boon_log.h  myconf.h
weikakou_project/mywkk/jovideo/: .goutputstream-Z4CTXY  Boon_algo_lpr_define.h  Boon_algo_lpr_struct.h  CMakeLists.txt  jovideo.cpp  jovideo.h
weikakou_project/mywkk/logs/: basic.txt
weikakou_project_spdlog/: CMakeLists.txt
weikakou_project_spdlog/kfs/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
weikakou_project_spdlog/kfs/algorithm/: .bocr.cpp.swp  .carriage.h.swp  .cproject  .goutputstream-6RRFXY  .project
weikakou_project_spdlog/kfs/cdt/: .cproject  .project  CMakeCache.txt  Makefile
weikakou_project_spdlog/kfs/cdt/.csettings/: 0.1861332715_cdtBuildSystem  0.1861332715_org.eclipse.cdt.core.settings  0.399119964_cdtBuildSystem  0.399119964_org.eclipse.cdt.core.settings  cdt.managedbuild.toolchain.gnu.base.1741728665_org.eclipse.cdt.core.settings  cdt.managedbuild.toolchain.gnu.base.85617688_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.85617688_org.eclipse.cdt.core.settings  cdt.managedbuild.toolchain.gnu.cross.base.2107692391_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.cross.base.848484430_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.cross.base.848484430_org.eclipse.cdt.core.settings
weikakou_project_spdlog/kfs/conf/: data.txt  log.txt  sfconfig
weikakou_project_spdlog/kfs/data/: ca-rj.crt  client-lc.crt  client-lc.key.pem  client-rj.key.pem
weikakou_project_spdlog/kfs/header/: Boon.h  Boon_algo_LUT.h  Boon_algo_ann.h  Boon_algo_cclist.h  Boon_algo_ivs_config.h  Boon_algo_lookup_table.h  Boon_algo_recognize.h  Boon_algo_tripwire.h  Boon_algo_tripwire_param.h  Boon_algo_verification_private.h  ivs_ccl.h
weikakou_project_spdlog/kfs/mytest/: Boon_algo_tripwire_private.h  CMakeCache.txt  Makefile  a.out  cmake_install.cmake  demo.cpp-bak  locate.cpp  mytest
weikakou_project_spdlog/mywkk/: CMakeLists.txt  cHttpClient.cpp  cHttpClient.h  main.cpp
weikakou_project_spdlog/mywkk/common/: bglobal.h  codec.cpp  common.h
weikakou_project_spdlog/mywkk/data/: ca-sj.crt  client-sj.crt  client-sj.key.pem
weikakou_project_spdlog/mywkk/include/: Boon.h  Boon_algo_ivs_result.h  Boon_algo_type.h  jcsdk.h  mycommon.h  myconf.h
weikakou_project_spdlog/mywkk/jovideo/: Boon.h  Boon_algo_type.h  alg.h  jovideo.cpp  jovideo.h
